                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 04-08-2006 fixed: some files slipped through when browsing for dirs in filebrowser (for instance shoutcast streams).
 - 04-08-2006 fixed: [ 1518486 ] xbmc.PlayList(0)[i].getduration() is broken.
 - 04-08-2006 changed: last loaded profile is now automatically selected in the login screen.
 - 04-08-2006 fixed: reenabled filedirectories in the browse for subtitles dialog. means archives works again.
 - 04-08-2006 added: [ 1533282 ] IMDb Python Library. thanks to no1cantel and allthekill. now go create a bunch of fancy imdb enabled scripts! :)
 - 03-08-2006 changed: guibuilder.py, added <resolution> option tag to skin.xml file, fastMethod option, maybe others.
 - 02-08-2006 fixed: [ 1492732 ] mbcs encoding incorrectly leaves null byte at end of string.
 - 01-08-2006 fixed: Cleaned up the action code + moved the special case built in function interception for the login window to its class.
 - 01-08-2006 fixed: List and thumbcontrols cleared there page reference when cleared, meaning refreshed windows often caused jumping in the lists.
 - 01-08-2006 fixed: guibuilder.py, apparently xbmc.getLocalizedifong() isn't the same as xbmc.getLocalizedString() :)
 - 01-08-2006 added: guibuilder.py and example in GUI Builder.zip. This module allows you to skin your python scripts with a standard XBMC skinfile.xml.
 - 01-08-2006 fixed: on some dvd's, menu overlays appeared to soon, even after the last bugfix.
 - 01-08-2006 fixed: [ 1530775 ] Trainerpath dialog bug.
 - 01-08-2006 added: [ 1527477 ] Add restart video menu when auto resume video option is on. thanks to kusskowe.
 - 01-08-2006 changed: don't start kai on login screen.